--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="filnik.salestaxesproblem.activities.MainActivity">
+    android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="44dp"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal"
+            android:weightSum="2" >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_weight="@integer/config_first"
+                android:singleLine="true"
+                android:layout_gravity="center"
+                android:text="@string/name"
+                android:textSize="17sp" />
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="@integer/config_second"
+                android:singleLine="true"
+                android:layout_marginRight="24dp"
+                android:layout_gravity="center"
+                android:hint="@string/name_hint"
+                android:textSize="17sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal"
+            android:weightSum="2" >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_weight="@integer/config_first"
+                android:singleLine="true"
+                android:layout_gravity="center"
+                android:text="@string/type"
+                android:textSize="17sp" />
+            <Spinner
+                android:id="@+id/type"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="@integer/config_second"
+                android:singleLine="true"
+                android:layout_marginRight="24dp"
+                android:layout_gravity="center"
+                android:entries="@array/item_types"
+                android:textSize="17sp" />
+        </LinearLayout>
 
-    </android.support.design.widget.AppBarLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal"
+            android:weightSum="2" >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_weight="@integer/config_first"
+                android:singleLine="true"
+                android:layout_gravity="center"
+                android:text="@string/price"
+                android:textSize="17sp" />
+            <EditText
+                android:id="@+id/price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="@integer/config_second"
+                android:singleLine="true"
+                android:layout_marginRight="24dp"
+                android:layout_gravity="center"
+                android:hint="@string/price_hint"
+                android:textSize="17sp" />
+        </LinearLayout>
 
-    <include layout="@layout/content_main" />
-
-</android.support.design.widget.CoordinatorLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal"
+            android:weightSum="2" >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_weight="@integer/config_first"
+                android:singleLine="true"
+                android:layout_gravity="center"
+                android:text="@string/imported"
+                android:textSize="17sp" />
+            <CheckBox
+                android:id="@+id/imported"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="@integer/config_second"
+                android:singleLine="true"
+                android:layout_marginRight="24dp"
+                android:layout_gravity="center"
+                android:textSize="17sp" />
+        </LinearLayout>
+    </LinearLayout>
+    <Button
+        android:id="@+id/add_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="11dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add"/>
+</RelativeLayout>
