--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,10 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="filnik.salestaxesproblem.activities.MainActivity">
-    <item
-        android:id="@+id/chart"
-        android:icon="@mipmap/ic_shopping_cart_white"
-        app:actionLayout="@layout/menu_action_item_badge"
-        app:showAsAction="always"
-        android:title="@string/cart"/>
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<item
+    android:id="@+id/cart"
+    android:icon="@mipmap/ic_shopping_cart_white"
+    android:showAsAction="always"
+    android:actionLayout="@layout/menu_action_item_badge"
+    style="@android:style/Widget.ActionButton"
+    android:title="@string/cart"/>
 </menu>
