--- a/app/src/main/res/layout/element_cart.xml
+++ b/app/src/main/res/layout/element_cart.xml
@@ -7,19 +7,11 @@
     <TextView
         android:layout_marginTop="@dimen/element_margin"
         android:layout_marginBottom="@dimen/element_margin"
-        android:id="@+id/name"
+        android:layout_marginLeft="@dimen/element_margin"
+        android:id="@+id/text"
         android:layout_gravity="center"
         android:layout_weight="1.5"
         android:layout_width="0dp"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_marginTop="@dimen/element_margin"
-        android:layout_marginBottom="@dimen/element_margin"
-        android:id="@+id/price"
-        android:textStyle="bold"
-        android:layout_weight="0.5"
-        android:layout_gravity="center"
-        android:layout_width="0dp"
+        android:textSize="18sp"
         android:layout_height="wrap_content" />
 </LinearLayout>
